[package]
name = "wandb-ft"
version = "0.1.0"
edition = "2024"
description = "Free-threading-native PyO3 bindings for wandb"
license = "MIT"

[lib]
name = "_wandb_ft"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", default-features = false, features = ["extension-module", "macros"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
numpy = "0.29.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }
graphql_client = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
